k8-services/prod/apigw/apigw-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tfs-apigw
  labels:
    app.kubernetes.io/name: apigw
    app: apigw
