k8-services/prod/apigw/apigw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfs-apigw-deployment
  labels:
    app.kubernetes.io/name: apigw
    app: apigw
    client: transfast
  namespace: tfs-apigw
  annotations:
    linkerd.io/inject: enabled
spec:
  selector:
    matchLabels:
      app: apigw
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: apigw
    spec:
      containers:
        - name: syllo-apigw
          image: 458838185766.dkr.ecr.eu-west-1.amazonaws.com/syllo-api-gateway:1.9.2
          imagePullPolicy: Always
          resources:
            limits:
              memory: 600Mi
              cpu: "0.45"
            requests:
              memory: 400Mi
              cpu: "0.30"
          ports:
            - containerPort: 10001
              name: apigw-grpc-port
